tests/error/equalsByteString.uplc
(program 0.0.0 [ [ (builtin equalsByteString) (con integer 256) ] (con integer 265) ])
